--- a/static/general.css
+++ b/static/general.css
@@ -25,6 +25,10 @@
     margin: 8px;
 }
 
+.text-color-es-plain {
+    color: #50B6E3 !important;
+}
+
 .text-color-es {
     color: #50B6E3 !important;
 }
@@ -83,4 +87,17 @@ blue{
 
 .feature-icon:hover{
     background-color: #50B6E3 !important;
+}
+
+.no-decoration{
+    text-decoration: none;
+}
+
+.btn-no-style{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    border: none;
+    width: 100%;
+    height: 100%;
 }
