--- a/static/general.css
+++ b/static/general.css
@@ -94,10 +94,10 @@ blue{
 }
 
 .btn-no-style{
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    border: none;
-    width: 100%;
-    height: 100%;
+    padding: 0 !important;
+    margin: 0!important;
+    text-decoration: none!important;
+    border: none!important;
+    width: 100%!important;
+    height: 100%!important;
 }
