--- a/static/general.css
+++ b/static/general.css
@@ -105,7 +105,7 @@ blue{
 }
 
 .btn-no-style:hover{
-    box-shadow: 0 1rem 3rem rgba(0,0,0,0.2);
+    box-shadow: 0 1rem 3rem rgba(0,0,0,0.2)!important;
     background-color: transparent!important;
-    transition: .3s;
+    transition: .3s!important;
 }
