Pre-final version

--- a/static/general.css
+++ b/static/general.css
@@ -118,3 +118,18 @@ blue{
 .modal-content{
     background: rgba(255,255,255,0.925)
 }
+
+.h-90{
+    height: 90%!important;
+}
+
+.wh-100{
+    width: 100%!important;
+}
+
+.pr-2{
+    padding-right: 0.5rem!important;
+}
+.modal-body{
+    padding-bottom: 0!important;
+}
