--- a/static/general.css
+++ b/static/general.css
@@ -1,5 +1,5 @@
 header, .header-container{
-    background-color: white;
+    background-color: white!important;
 }
 
 .text-justify {
@@ -164,3 +164,44 @@ blue{
   .pt-8{
       padding-top: 4.7rem;
   }
+
+  /* Safari */
+
+.a {
+    color: #50B6E3 !important;
+    text-decoration: none;
+}
+
+.a:hover {
+    color: #59cbfd !important;
+}
+
+.pxh-5{
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+.pyh-5{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+.footer-nav{
+    justify-content: flex-end!important;
+}
+
+@media (max-width: 576px){
+    .pxh-5{
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+    
+    .pyh-5{
+        padding-top: 0rem;
+        padding-bottom: 0rem;
+    }
+
+    .footer-nav{
+        justify-content: center;
+    }
+}
