--- a/static/general.css
+++ b/static/general.css
@@ -32,6 +32,7 @@ header, .header-container{
 
 .cooperation-logo:hover{
     transform: scale(1.05);
+    -webkit-transform:scale(1.05);
     transition: 0.3s;
 }
 .text-color-es-plain {
