--- a/static/general.css
+++ b/static/general.css
@@ -266,3 +266,9 @@ blue{
     font-size: 1.5rem;
     font-size:calc(1.3rem + .6vw);
 }
+
+.section-image{
+    max-height: 700px;
+    width: auto;
+    height: auto;
+}
