--- a/static/general.css
+++ b/static/general.css
@@ -12,12 +12,16 @@ header, .header-container{
     text-decoration: none;
 }
 
-.contact-row>h4>a{
+.fake-h4{
+    font-size: 1.5rem !important;
+}
+
+.fake-h4 a{
     text-decoration: none;
 }
 
 
-.contact-row>h4>a>p{
+.fake-h4 a p{
     display: inline-block;
     padding-left:8px;
 }
@@ -215,10 +219,10 @@ blue{
         justify-content: center;
     }
 
-    h4{
+    .fake-h4{
         font-size: 1.2rem!important;
     }
-    .contact-row h4 svg{
+    .contact-row .fake-h4 svg{
         height: 28px!important;
         width: 28px!important;
     }
@@ -261,6 +265,13 @@ blue{
     }
     
 }
+
+@media (max-width: 375px){
+    .fake-h4 a svg{
+        display: none;
+    }
+}
+
 
 .pre-title{
     font-size: 1.5rem;
