--- a/static/general.css
+++ b/static/general.css
@@ -1,44 +1,45 @@
-header, .header-container{
-    background-color: white!important;
+header, .header-container {
+    background-color: white !important;
 }
 
 .text-justify {
     text-align: justify;
-  }
+}
 
 
-.contact-row{
+.contact-row {
     padding: 4px 0 4px 0;
     text-decoration: none;
 }
 
-.fake-h4{
+.fake-h4 {
     font-size: 1.5rem !important;
 }
 
-.fake-h4 a{
+.fake-h4 a {
     text-decoration: none;
 }
 
 
-.fake-h4 a p{
+.fake-h4 a p {
     display: inline-block;
-    padding-left:8px;
+    padding-left: 8px;
 }
 
 
-.cooperation-logo{
+.cooperation-logo {
     padding: 8px;
     margin: 8px;
     transition: 0.3s;
     cursor: pointer;
 }
 
-.cooperation-logo:hover{
+.cooperation-logo:hover {
     transform: scale(1.05);
-    -webkit-transform:scale(1.05);
+    -webkit-transform: scale(1.05);
     transition: 0.3s;
 }
+
 .text-color-es-plain {
     color: #50B6E3 !important;
 }
@@ -51,21 +52,21 @@ header, .header-container{
     color: #59cbfd !important;
 }
 
-.bg-color-es{
+.bg-color-es {
     background-color: #50B6E3 !important;
 }
 
-.bg-color-es:hover{
-    background-color: #59cbfd!important;
+.bg-color-es:hover {
+    background-color: #59cbfd !important;
     transition: ease-in 0.3;
 }
 
-.bg-green{
-    background-color:#52cc52!important;
+.bg-green {
+    background-color: #52cc52 !important;
 }
 
-.bg-green:hover{
-    background-color: #57d957!important;
+.bg-green:hover {
+    background-color: #57d957 !important;
 }
 
 
@@ -82,17 +83,17 @@ header, .header-container{
     width: 100%;
 }
 
-.fill { 
+.fill {
     min-height: 100%;
     height: 100%;
 }
 
-blue{
-    color:#50B6E3 !important;
+blue {
+    color: #50B6E3 !important;
 }
 
-.feature-icon{
-    height:64px;
+.feature-icon {
+    height: 64px;
     width: 64px;
     display: flex;
     justify-content: center;
@@ -100,83 +101,88 @@ blue{
     border-radius: 12px;
 }
 
-.feature-icon:hover{
+.feature-icon:hover {
     background-color: #50B6E3 !important;
 }
 
-.no-decoration{
+.no-decoration {
     text-decoration: none !important;
 }
 
-.btn-no-style{
+.btn-no-style {
     padding: 0 !important;
-    margin: 0!important;
-    text-decoration: none!important;
-    border: none!important;
-    width: 100%!important;
-    height: 100%!important;
-    background-color: transparent!important;
+    margin: 0 !important;
+    text-decoration: none !important;
+    border: none !important;
+    width: 100% !important;
+    height: 100% !important;
+    background-color: transparent !important;
     border-radius: 1rem;
 }
 
-.btn-no-style:hover{
-    box-shadow: 0 1rem 3rem rgba(0,0,0,0.25)!important;
-    background-color: transparent!important;
-    transition: .3s!important;
+.btn-no-style:hover {
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.25) !important;
+    background-color: transparent !important;
+    transition: .3s !important;
     transform: scale(1.02);
 }
 
-.modal-open .container-fluid, .modal-open  .container {
+.modal-open .container-fluid, .modal-open .container {
     -webkit-filter: blur(2px) grayscale(10%);
 }
 
-.modal-content{
-    background: rgba(255,255,255,0.925)
+.modal-content {
+    background: rgba(255, 255, 255, 0.925)
 }
 
-.h-90{
-    height: 90%!important;
+.h-90 {
+    height: 90% !important;
 }
 
-.wh-100{
-    width: 100%!important;
+.wh-100 {
+    width: 100% !important;
 }
 
-.pr-2{
-    padding-right: 0.5rem!important;
-}
-.modal-body{
-    padding-bottom: 0!important;
+.pr-2 {
+    padding-right: 0.5rem !important;
 }
 
-.light-gray{
-    color: rgb(200,200,200);
+.modal-body {
+    padding-bottom: 0 !important;
 }
 
-.light-gray{
-    color: rgb(200,200,200)!important;
+.light-gray {
+    color: rgb(200, 200, 200);
+}
+
+.light-gray {
+    color: rgb(200, 200, 200) !important;
 }
 
 
-.smart-scroll{
+.smart-scroll {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 1030;
-  }
-  .scrolled-down{
-     transform:translateY(-100%); transition: all 0.3s ease-in-out;
-  }
-  .scrolled-up{
-     transform:translateY(0); transition: all 0.3s ease-in-out;
-  }
+}
 
-  .pt-8{
-      padding-top: 4.7rem;
-  }
+.scrolled-down {
+    transform: translateY(-100%);
+    transition: all 0.3s ease-in-out;
+}
 
-  /* Safari */
+.scrolled-up {
+    transform: translateY(0);
+    transition: all 0.3s ease-in-out;
+}
+
+.pt-8 {
+    padding-top: 4.7rem;
+}
+
+/* Safari */
 
 .a {
     color: #50B6E3 !important;
@@ -188,104 +194,120 @@ blue{
 }
 
 
-.footer-nav{
-    justify-content: flex-end!important;
+.footer-nav {
+    justify-content: flex-end !important;
 }
 
-@media (max-width: 1399px){
+@media (max-width: 1399px) {
 
-    .buttons{
-        flex-direction: column!important;
+    .buttons {
+        flex-direction: column !important;
     }
 }
 
-@media (min-width: 1200px){
+@media (min-width: 1200px) {
 
-    .img-fluid{
-        max-width: 90%!important;
+    .img-fluid {
+        max-width: 90% !important;
     }
 }
 
-@media (max-width: 992px){
+@media (max-width: 992px) {
 
-    .buttons{
-        flex-direction: row!important;
+    .buttons {
+        flex-direction: row !important;
     }
 }
 
-@media (max-width: 576px){
+@media (max-width: 576px) {
 
-    .footer-nav{
+    .footer-nav {
         justify-content: center;
     }
 
-    .fake-h4{
-        font-size: 1.2rem!important;
-    }
-    .contact-row .fake-h4 svg{
-        height: 28px!important;
-        width: 28px!important;
-    }
-    footer{
-        padding-bottom: 0!important;
+    .fake-h4 {
+        font-size: 1.2rem !important;
     }
 
-    .py-5{
-        padding-top: 2rem!important;
-        padding-bottom: 2rem!important;
+    .contact-row .fake-h4 svg {
+        height: 28px !important;
+        width: 28px !important;
     }
 
-    .p-5{
-        padding: 2rem 2rem 0rem 2rem!important;
-    }
-    
-    .py-4{
-        padding-top: 1rem!important;
-        padding-bottom: 1rem!important;
-    }
-    .py-3{
-        padding-top: 0.5rem!important;
-        padding-bottom: 0.5rem!important;
+    footer {
+        padding-bottom: 0 !important;
     }
 
-    .my-4{
-        margin-top: 0.5rem!important;
-        margin-bottom: 0!important;
-    }
-    footer p{
-        padding-top: 1rem!important;
+    .py-5 {
+        padding-top: 2rem !important;
+        padding-bottom: 2rem !important;
     }
 
-    .buttons a button{
-        width: 215px!important;
+    .p-5 {
+        padding: 2rem 2rem 0rem 2rem !important;
     }
 
-    header > a{
-        padding-right: 1rem!important
+    .py-4 {
+        padding-top: 1rem !important;
+        padding-bottom: 1rem !important;
     }
-    
+
+    .py-3 {
+        padding-top: 0.5rem !important;
+        padding-bottom: 0.5rem !important;
+    }
+
+    .my-4 {
+        margin-top: 0.5rem !important;
+        margin-bottom: 0 !important;
+    }
+
+    footer p {
+        padding-top: 1rem !important;
+    }
+
+    .buttons a button {
+        width: 215px !important;
+    }
+
+    header > a {
+        padding-right: 1rem !important
+    }
+
+    .long-text {
+        margin-bottom: 2rem !important;
+    }
 }
 
-@media (max-width: 375px){
-    .fake-h4 a svg{
+@media (max-width: 375px) {
+    .fake-h4 a svg {
         display: none;
     }
 }
 
 
-.pre-title{
+.pre-title {
     font-size: 1.5rem;
-    font-size:calc(1.3rem + .6vw);
+    font-size: calc(1.3rem + .6vw);
 }
 
-.section-image{
+.section-image {
     max-height: 700px;
     width: auto;
     height: auto;
 }
 
-.display-cust{
+.display-cust {
     font-size: 2rem;
     font-weight: 300;
     line-height: 1.2;
+}
+
+.card div ul li {
+    margin-bottom: 1rem;
+}
+
+.modal-body img {
+    height: 100%;
+    width: 100%;
 }
