Modal body image responsive

--- a/static/general.css
+++ b/static/general.css
@@ -308,6 +308,6 @@ blue {
 }
 
 .modal-body img {
-    height: 100%;
-    width: 100%;
+    height: 100% !important;
+    width: 100% !important;
 }
