--- a/static/general.css
+++ b/static/general.css
@@ -338,3 +338,7 @@ blue {
     padding-top:0.5rem!important;
     font-size:1.5rem!important;
 }
+
+.font-italic{
+    font-style: italic!important;
+}
