--- a/static/general.css
+++ b/static/general.css
@@ -359,17 +359,19 @@ blue {
 
 .carousel-caption{
     color: black!important;
+    position: initial!important;
+    text-align: initial!important;
 }
 
 .carousel-control-next{
     width: 5%!important;
-    background-color: white!important;
+    background-color: transparent!important;
     opacity: 1!important;
 }
 
 .carousel-control-prev{
     width: 5%!important;
-    background-color: white!important;
+    background-color: transparent!important;
     opacity: 1!important;
 }
 .carousel-control-next-icon{
@@ -382,5 +384,20 @@ blue {
 
 .carousel-indicators [data-bs-target] {
     background-color: #6c757d!important;
+}
 
+.m-width-ref-image{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.ref-name{
+    font-size: 1.2rem!important;
+}
+
+@media (min-width: 992px) {
+  .ref-image{
+      width: 40%;
+  }
 }
