--- a/static/general.css
+++ b/static/general.css
@@ -365,13 +365,13 @@ blue {
 
 .carousel-control-next{
     width: 5%!important;
-    background-color: transparent!important;
+    background-color: white!important;
     opacity: 1!important;
 }
 
 .carousel-control-prev{
     width: 5%!important;
-    background-color: transparent!important;
+    background-color: white!important;
     opacity: 1!important;
 }
 .carousel-control-next-icon{
