--- a/static/css/general.css
+++ b/static/css/general.css
@@ -347,6 +347,10 @@ blue {
     display: block!important;
 }
 
+.div.cookies-consent{
+    display: block!important;
+}
+
 .cookies-consent a{
     font-weight: 600!important;
     text-decoration: none!important;
